=== rmw ChangeLog ===

2020-05-28

  * Fixed broken purge test

2019-11-27

  * Added '-R' option, changed '--recurse' option to '--recursive',
  added recursive (rm compatibility) options in --help output, fixed
  message shown when using '-r, --recursive'

2019-08-12

  * rmw v0.7.04 has been released.

  * The config file is now read from $XDG_CONFIG_HOME/rmwrc or
  ~/.config/rmwrc.

  * `lastpurge` is now 'purge-time' and stored in $XDG_DATA_HOME/rmw or
  ~/.local/share/rmw.

  * `lastrmw` is now 'mrl' and stored in $XDG_DATA_HOME/rmw or
  ~/.local/share/rmw.

  * The default Waste folder (specified in the configuration file) is now
  ~/.local/share/Waste instead of ~/trash.rmw.

  * The ~/.config/rmw directory is no longer used. It can be deleted,
  but you may first want to copy your old configuration file to the new
  location.


2019-08-06

  * To get user's home dir, revert back to retrieving via environmental
  variable (conforms to FreeDesktop Trash Spec).

  * on DragonFlyBSD, it's no longer required to use `env
  MENU_LIBS=-lmenu` when running configure
  <https://gitlab.com/andy5995/rmw/issues/220>

2019-08-06

  * rmw v0.7.03 has been released.

2019-07-30

  * rmw now gets the user's HOMEDIR from a passwd struct (see
  <https://linux.die.net/man/3/getpwnam>), not from the environmental
  variable.

  * A waste folder can now use the $UID (user id) variable.
  <https://github.com/theimpossibleastronaut/rmw/issues/134>

2019-07-21

  * Because rmw automatically creates a config file in the user's home
  directory, rmw no longer searches in /etc (or /usr/local/etc..) for
  rmwrc. It can be removed from your system if installed previously.

  * FEATURE-REMOVAL:-t,--translate option

2019-07-20

  * BUGFIX: (severity: low) Some calls to strncat() where an incorrect
  value was used, which could potentially cause a string to get
  truncated to an undesirable length
  <https://github.com/theimpossibleastronaut/rmw/issues/257>.

2019-07-16
